extern/Hexapod/win_32/XPS_Q8_drivers.h

DLL int __stdcall PositionerCompensatedPCOLoadToMemory (int SocketIndex, char * PositionerName, char * DataLines);  /* Load data lines to CIE08 compensated PCO data buffer */
DLL int __stdcall PositionerCompensatedPCOMemoryReset (int SocketIndex, char * PositionerName);  /* Reset CIE08 compensated PCO data buffer */
DLL int __stdcall PositionerCompensatedPCOPrepare (int SocketIndex, char * PositionerName, int ScanDirection, int NbElements, double StartPosition[]);  /* Prepare data for CIE08 compensated PCO mode */
DLL int __stdcall PositionerCompensatedPCOSet (int SocketIndex, char * PositionerName, double Start, double Stop, double Distance, double Width);  /* Set data to CIE08 compensated PCO data buffer */
DLL int __stdcall PositionerCompensationFrequencyNotchsGet (int SocketIndex, char * PositionerName, double * NotchFrequency1, double * NotchBandwidth1, double * NotchGain1, double * NotchFrequency2, double * NotchBandwidth2, double * NotchGain2, double * NotchFrequency3, double * NotchBandwidth3, double * NotchGain3);  /* Read frequency compensation notch filters parameters  */
DLL int __stdcall PositionerCompensationFrequencyNotchsSet (int SocketIndex, char * PositionerName, double NotchFrequency1, double NotchBandwidth1, double NotchGain1, double NotchFrequency2, double NotchBandwidth2, double NotchGain2, double NotchFrequency3, double NotchBandwidth3, double NotchGain3);  /* Update frequency compensation notch filters parameters  */
DLL int __stdcall PositionerCompensationLowPassTwoFilterGet (int SocketIndex, char * PositionerName, double * CutOffFrequency);  /* Read second order low-pass filter parameters  */
DLL int __stdcall PositionerCompensationLowPassTwoFilterSet (int SocketIndex, char * PositionerName, double CutOffFrequency);  /* Update second order low-pass filter parameters  */
DLL int __stdcall PositionerCompensationNotchModeFiltersGet (int SocketIndex, char * PositionerName, double * NotchModeFr1, double * NotchModeFa1, double * NotchModeZr1, double * NotchModeZa1, double * NotchModeFr2, double * NotchModeFa2, double * NotchModeZr2, double * NotchModeZa2);  /* Read notch mode filters parameters  */
DLL int __stdcall PositionerCompensationNotchModeFiltersSet (int SocketIndex, char * PositionerName, double NotchModeFr1, double NotchModeFa1, double NotchModeZr1, double NotchModeZa1, double NotchModeFr2, double NotchModeFa2, double NotchModeZr2, double NotchModeZa2);  /* Update notch mode filters parameters  */
DLL int __stdcall PositionerCompensationPhaseCorrectionFiltersGet (int SocketIndex, char * PositionerName, double * PhaseCorrectionFn1, double * PhaseCorrectionFd1, double * PhaseCorrectionGain1, double * PhaseCorrectionFn2, double * PhaseCorrectionFd2, double * PhaseCorrectionGain2);  /* Read phase correction filters parameters  */
DLL int __stdcall PositionerCompensationPhaseCorrectionFiltersSet (int SocketIndex, char * PositionerName, double PhaseCorrectionFn1, double PhaseCorrectionFd1, double PhaseCorrectionGain1, double PhaseCorrectionFn2, double PhaseCorrectionFd2, double PhaseCorrectionGain2);  /* Update phase correction filters parameters  */
DLL int __stdcall PositionerCompensationSpatialPeriodicNotchsGet (int SocketIndex, char * PositionerName, double * SpatialNotchStep1, double * SpatialNotchBandwidth1, double * SpatialNotchGain1, double * SpatialNotchStep2, double * SpatialNotchBandwidth2, double * SpatialNotchGain2, double * SpatialNotchStep3, double * SpatialNotchBandwidth3, double * SpatialNotchGain3);  /* Read spatial compensation notch filters parameters  */
DLL int __stdcall PositionerCompensationSpatialPeriodicNotchsSet (int SocketIndex, char * PositionerName, double SpatialNotchStep1, double SpatialNotchBandwidth1, double SpatialNotchGain1, double SpatialNotchStep2, double SpatialNotchBandwidth2, double SpatialNotchGain2, double SpatialNotchStep3, double SpatialNotchBandwidth3, double SpatialNotchGain3);  /* Update spatial compensation notch filters parameters  */
DLL int __stdcall PositionerCorrectorNotchFiltersSet (int SocketIndex, char * PositionerName, double NotchFrequency1, double NotchBandwidth1, double NotchGain1, double NotchFrequency2, double NotchBandwidth2, double NotchGain2);  /* Update filters parameters  */
DLL int __stdcall PositionerCorrectorNotchFiltersGet (int SocketIndex, char * PositionerName, double * NotchFrequency1, double * NotchBandwidth1, double * NotchGain1, double * NotchFrequency2, double * NotchBandwidth2, double * NotchGain2);  /* Read filters parameters  */
DLL int __stdcall PositionerCorrectorPIDBaseSet (int SocketIndex, char * PositionerName, double MovingMass, double StaticMass, double Viscosity, double Stiffness);  /* Update PIDBase parameters  */
DLL int __stdcall PositionerCorrectorPIDBaseGet (int SocketIndex, char * PositionerName, double * MovingMass, double * StaticMass, double * Viscosity, double * Stiffness);  /* Read PIDBase parameters  */
DLL int __stdcall PositionerCorrectorPIDFFAccelerationSet (int SocketIndex, char * PositionerName, bool ClosedLoopStatus, double KP, double KI, double KD, double KS, double IntegrationTime, double DerivativeFilterCutOffFrequency, double GKP, double GKI, double GKD, double KForm, double KFeedForwardAcceleration, double KFeedForwardJerk);  /* Update corrector parameters */
DLL int __stdcall PositionerCorrectorPIDFFAccelerationGet (int SocketIndex, char * PositionerName, bool * ClosedLoopStatus, double * KP, double * KI, double * KD, double * KS, double * IntegrationTime, double * DerivativeFilterCutOffFrequency, double * GKP, double * GKI, double * GKD, double * KForm, double * KFeedForwardAcceleration, double * KFeedForwardJerk);  /* Read corrector parameters */
DLL int __stdcall PositionerCorrectorP2IDFFAccelerationSet (int SocketIndex, char * PositionerName, bool ClosedLoopStatus, double KP, double KI, double KI2, double KD, double KS, double IntegrationTime, double DerivativeFilterCutOffFrequency, double GKP, double GKI, double GKD, double KForm, double KFeedForwardAcceleration, double KFeedForwardJerk, double SetpointPositionDelay);  /* Update corrector parameters */
DLL int __stdcall PositionerCorrectorP2IDFFAccelerationGet (int SocketIndex, char * PositionerName, bool * ClosedLoopStatus, double * KP, double * KI, double * KI2, double * KD, double * KS, double * IntegrationTime, double * DerivativeFilterCutOffFrequency, double * GKP, double * GKI, double * GKD, double * KForm, double * KFeedForwardAcceleration, double * KFeedForwardJerk, double * SetpointPositionDelay);  /* Read corrector parameters */
DLL int __stdcall PositionerCorrectorPIDFFVelocitySet (int SocketIndex, char * PositionerName, bool ClosedLoopStatus, double KP, double KI, double KD, double KS, double IntegrationTime, double DerivativeFilterCutOffFrequency, double GKP, double GKI, double GKD, double KForm, double KFeedForwardVelocity);  /* Update corrector parameters */
DLL int __stdcall PositionerCorrectorPIDFFVelocityGet (int SocketIndex, char * PositionerName, bool * ClosedLoopStatus, double * KP, double * KI, double * KD, double * KS, double * IntegrationTime, double * DerivativeFilterCutOffFrequency, double * GKP, double * GKI, double * GKD, double * KForm, double * KFeedForwardVelocity);  /* Read corrector parameters */
DLL int __stdcall PositionerCorrectorPIDDualFFVoltageSet (int SocketIndex, char * PositionerName, bool ClosedLoopStatus, double KP, double KI, double KD, double KS, double IntegrationTime, double DerivativeFilterCutOffFrequency, double GKP, double GKI, double GKD, double KForm, double KFeedForwardVelocity, double KFeedForwardAcceleration, double Friction);  /* Update corrector parameters */
DLL int __stdcall PositionerCorrectorPIDDualFFVoltageGet (int SocketIndex, char * PositionerName, bool * ClosedLoopStatus, double * KP, double * KI, double * KD, double * KS, double * IntegrationTime, double * DerivativeFilterCutOffFrequency, double * GKP, double * GKI, double * GKD, double * KForm, double * KFeedForwardVelocity, double * KFeedForwardAcceleration, double * Friction);  /* Read corrector parameters */
DLL int __stdcall PositionerCorrectorPIPositionSet (int SocketIndex, char * PositionerName, bool ClosedLoopStatus, double KP, double KI, double IntegrationTime);  /* Update corrector parameters */
DLL int __stdcall PositionerCorrectorPIPositionGet (int SocketIndex, char * PositionerName, bool * ClosedLoopStatus, double * KP, double * KI, double * IntegrationTime);  /* Read corrector parameters */
DLL int __stdcall PositionerCorrectorSR1AccelerationSet (int SocketIndex, char * PositionerName, bool ClosedLoopStatus, double KP, double KI, double KV, double ObserverFrequency, double CompensationGainVelocity, double CompensationGainAcceleration, double CompensationGainJerk);  /* Update corrector parameters */
DLL int __stdcall PositionerCorrectorSR1AccelerationGet (int SocketIndex, char * PositionerName, bool * ClosedLoopStatus, double * KP, double * KI, double * KV, double * ObserverFrequency, double * CompensationGainVelocity, double * CompensationGainAcceleration, double * CompensationGainJerk);  /* Read corrector parameters */