extern/Hexapod/win_32/XPS_Q8_drivers.bas

Declare Function PositionerCompensatedPCOLoadToMemory Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal DataLines As String) As Integer '  Load data lines to CIE08 compensated PCO data buffer
Declare Function PositionerCompensatedPCOMemoryReset Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Integer '  Reset CIE08 compensated PCO data buffer
Declare Function PositionerCompensatedPCOPrepare Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ScanDirection As Integer, ByVal NbElements As Long, StartPosition As Double) As Integer '  Prepare data for CIE08 compensated PCO mode
Declare Function PositionerCompensatedPCOSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal Start As Double, ByVal Stop As Double, ByVal Distance As Double, ByVal Width As Double) As Integer '  Set data to CIE08 compensated PCO data buffer
Declare Function PositionerCompensationFrequencyNotchsGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, NotchFrequency1 As Double, NotchBandwidth1 As Double, NotchGain1 As Double, NotchFrequency2 As Double, NotchBandwidth2 As Double, NotchGain2 As Double, NotchFrequency3 As Double, NotchBandwidth3 As Double, NotchGain3 As Double) As Integer '  Read frequency compensation notch filters parameters 
Declare Function PositionerCompensationFrequencyNotchsSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal NotchFrequency1 As Double, ByVal NotchBandwidth1 As Double, ByVal NotchGain1 As Double, ByVal NotchFrequency2 As Double, ByVal NotchBandwidth2 As Double, ByVal NotchGain2 As Double, ByVal NotchFrequency3 As Double, ByVal NotchBandwidth3 As Double, ByVal NotchGain3 As Double) As Integer '  Update frequency compensation notch filters parameters 
Declare Function PositionerCompensationLowPassTwoFilterGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, CutOffFrequency As Double) As Integer '  Read second order low-pass filter parameters 
Declare Function PositionerCompensationLowPassTwoFilterSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal CutOffFrequency As Double) As Integer '  Update second order low-pass filter parameters 
Declare Function PositionerCompensationNotchModeFiltersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, NotchModeFr1 As Double, NotchModeFa1 As Double, NotchModeZr1 As Double, NotchModeZa1 As Double, NotchModeFr2 As Double, NotchModeFa2 As Double, NotchModeZr2 As Double, NotchModeZa2 As Double) As Integer '  Read notch mode filters parameters 
Declare Function PositionerCompensationNotchModeFiltersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal NotchModeFr1 As Double, ByVal NotchModeFa1 As Double, ByVal NotchModeZr1 As Double, ByVal NotchModeZa1 As Double, ByVal NotchModeFr2 As Double, ByVal NotchModeFa2 As Double, ByVal NotchModeZr2 As Double, ByVal NotchModeZa2 As Double) As Integer '  Update notch mode filters parameters 
Declare Function PositionerCompensationPhaseCorrectionFiltersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, PhaseCorrectionFn1 As Double, PhaseCorrectionFd1 As Double, PhaseCorrectionGain1 As Double, PhaseCorrectionFn2 As Double, PhaseCorrectionFd2 As Double, PhaseCorrectionGain2 As Double) As Integer '  Read phase correction filters parameters 
Declare Function PositionerCompensationPhaseCorrectionFiltersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal PhaseCorrectionFn1 As Double, ByVal PhaseCorrectionFd1 As Double, ByVal PhaseCorrectionGain1 As Double, ByVal PhaseCorrectionFn2 As Double, ByVal PhaseCorrectionFd2 As Double, ByVal PhaseCorrectionGain2 As Double) As Integer '  Update phase correction filters parameters 
Declare Function PositionerCompensationSpatialPeriodicNotchsGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, SpatialNotchStep1 As Double, SpatialNotchBandwidth1 As Double, SpatialNotchGain1 As Double, SpatialNotchStep2 As Double, SpatialNotchBandwidth2 As Double, SpatialNotchGain2 As Double, SpatialNotchStep3 As Double, SpatialNotchBandwidth3 As Double, SpatialNotchGain3 As Double) As Integer '  Read spatial compensation notch filters parameters 
Declare Function PositionerCompensationSpatialPeriodicNotchsSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal SpatialNotchStep1 As Double, ByVal SpatialNotchBandwidth1 As Double, ByVal SpatialNotchGain1 As Double, ByVal SpatialNotchStep2 As Double, ByVal SpatialNotchBandwidth2 As Double, ByVal SpatialNotchGain2 As Double, ByVal SpatialNotchStep3 As Double, ByVal SpatialNotchBandwidth3 As Double, ByVal SpatialNotchGain3 As Double) As Integer '  Update spatial compensation notch filters parameters 
Declare Function PositionerCorrectorNotchFiltersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal NotchFrequency1 As Double, ByVal NotchBandwidth1 As Double, ByVal NotchGain1 As Double, ByVal NotchFrequency2 As Double, ByVal NotchBandwidth2 As Double, ByVal NotchGain2 As Double) As Integer '  Update filters parameters 
Declare Function PositionerCorrectorNotchFiltersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, NotchFrequency1 As Double, NotchBandwidth1 As Double, NotchGain1 As Double, NotchFrequency2 As Double, NotchBandwidth2 As Double, NotchGain2 As Double) As Integer '  Read filters parameters 
Declare Function PositionerCorrectorPIDBaseSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal MovingMass As Double, ByVal StaticMass As Double, ByVal Viscosity As Double, ByVal Stiffness As Double) As Integer '  Update PIDBase parameters 
Declare Function PositionerCorrectorPIDBaseGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, MovingMass As Double, StaticMass As Double, Viscosity As Double, Stiffness As Double) As Integer '  Read PIDBase parameters 
Declare Function PositionerCorrectorPIDFFAccelerationSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ClosedLoopStatus As Boolean, ByVal KP As Double, ByVal KI As Double, ByVal KD As Double, ByVal KS As Double, ByVal IntegrationTime As Double, ByVal DerivativeFilterCutOffFrequency As Double, ByVal GKP As Double, ByVal GKI As Double, ByVal GKD As Double, ByVal KForm As Double, ByVal KFeedForwardAcceleration As Double, ByVal KFeedForwardJerk As Double) As Integer '  Update corrector parameters
Declare Function PositionerCorrectorPIDFFAccelerationGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ClosedLoopStatus As Boolean, KP As Double, KI As Double, KD As Double, KS As Double, IntegrationTime As Double, DerivativeFilterCutOffFrequency As Double, GKP As Double, GKI As Double, GKD As Double, KForm As Double, KFeedForwardAcceleration As Double, KFeedForwardJerk As Double) As Integer '  Read corrector parameters
Declare Function PositionerCorrectorP2IDFFAccelerationSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ClosedLoopStatus As Boolean, ByVal KP As Double, ByVal KI As Double, ByVal KI2 As Double, ByVal KD As Double, ByVal KS As Double, ByVal IntegrationTime As Double, ByVal DerivativeFilterCutOffFrequency As Double, ByVal GKP As Double, ByVal GKI As Double, ByVal GKD As Double, ByVal KForm As Double, ByVal KFeedForwardAcceleration As Double, ByVal KFeedForwardJerk As Double, ByVal SetpointPositionDelay As Double) As Integer '  Update corrector parameters
Declare Function PositionerCorrectorP2IDFFAccelerationGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ClosedLoopStatus As Boolean, KP As Double, KI As Double, KI2 As Double, KD As Double, KS As Double, IntegrationTime As Double, DerivativeFilterCutOffFrequency As Double, GKP As Double, GKI As Double, GKD As Double, KForm As Double, KFeedForwardAcceleration As Double, KFeedForwardJerk As Double, SetpointPositionDelay As Double) As Integer '  Read corrector parameters
Declare Function PositionerCorrectorPIDFFVelocitySet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ClosedLoopStatus As Boolean, ByVal KP As Double, ByVal KI As Double, ByVal KD As Double, ByVal KS As Double, ByVal IntegrationTime As Double, ByVal DerivativeFilterCutOffFrequency As Double, ByVal GKP As Double, ByVal GKI As Double, ByVal GKD As Double, ByVal KForm As Double, ByVal KFeedForwardVelocity As Double) As Integer '  Update corrector parameters
Declare Function PositionerCorrectorPIDFFVelocityGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ClosedLoopStatus As Boolean, KP As Double, KI As Double, KD As Double, KS As Double, IntegrationTime As Double, DerivativeFilterCutOffFrequency As Double, GKP As Double, GKI As Double, GKD As Double, KForm As Double, KFeedForwardVelocity As Double) As Integer '  Read corrector parameters
Declare Function PositionerCorrectorPIDDualFFVoltageSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ClosedLoopStatus As Boolean, ByVal KP As Double, ByVal KI As Double, ByVal KD As Double, ByVal KS As Double, ByVal IntegrationTime As Double, ByVal DerivativeFilterCutOffFrequency As Double, ByVal GKP As Double, ByVal GKI As Double, ByVal GKD As Double, ByVal KForm As Double, ByVal KFeedForwardVelocity As Double, ByVal KFeedForwardAcceleration As Double, ByVal Friction As Double) As Integer '  Update corrector parameters
Declare Function PositionerCorrectorPIDDualFFVoltageGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ClosedLoopStatus As Boolean, KP As Double, KI As Double, KD As Double, KS As Double, IntegrationTime As Double, DerivativeFilterCutOffFrequency As Double, GKP As Double, GKI As Double, GKD As Double, KForm As Double, KFeedForwardVelocity As Double, KFeedForwardAcceleration As Double, Friction As Double) As Integer '  Read corrector parameters
Declare Function PositionerCorrectorPIPositionSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ClosedLoopStatus As Boolean, ByVal KP As Double, ByVal KI As Double, ByVal IntegrationTime As Double) As Integer '  Update corrector parameters
Declare Function PositionerCorrectorPIPositionGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ClosedLoopStatus As Boolean, KP As Double, KI As Double, IntegrationTime As Double) As Integer '  Read corrector parameters
Declare Function PositionerCorrectorSR1AccelerationSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ClosedLoopStatus As Boolean, ByVal KP As Double, ByVal KI As Double, ByVal KV As Double, ByVal ObserverFrequency As Double, ByVal CompensationGainVelocity As Double, ByVal CompensationGainAcceleration As Double, ByVal CompensationGainJerk As Double) As Integer '  Update corrector parameters
Declare Function PositionerCorrectorSR1AccelerationGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ClosedLoopStatus As Boolean, KP As Double, KI As Double, KV As Double, ObserverFrequency As Double, CompensationGainVelocity As Double, CompensationGainAcceleration As Double, CompensationGainJerk As Double) As Integer '  Read corrector parameters
